create api update point
